@@ -1,6 +1,7 @@
 ver 0.20.6 (not yet released)
 * decoder
   - mpcdec: fix crash (division by zero) after seeking
+* workaround for GCC 4.9.4 / libstdc++ bug (build failure)
 
 ver 0.20.5 (2017/02/20)
 * tags
